--- a/src/Views/Home/Privacy.cshtml
+++ b/src/Views/Home/Privacy.cshtml
@@ -4,7 +4,8 @@
 <h1>@ViewData["Title"]</h1>
 <h2>Uw privacy</h2>
 
-<p>Voor goede hulpverlening is het nodig om een dossier bij te houden. Dit is ook een verplichting vanuit de Jeugdwet en de WGBO. 
+<p>
+    Voor goede hulpverlening is het nodig om een dossier bij te houden. Dit is ook een verplichting vanuit de Jeugdwet en de WGBO. 
     Hierin leggen wij de gegevens vast van u, uw kind, andere gezinsleden en betrokken hulpverleners. 
     Zorgmaatschap Den Haag gaat zorgvuldig om met de gegevens over u en uw gezin. De afspraken hierover staan in ons Privacyreglement. 
     De belangrijkste afspraken leest u op deze pagina.
