--- a/src/Views/Aanmelding/Details.cshtml
+++ b/src/Views/Aanmelding/Details.cshtml
@@ -52,6 +52,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NaamVoogd)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.hulpverlener)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.hulpverlener)
+        </dd>
     </dl>
 </div>
 <div>
