--- a/src/Views/Aanmelding/Index.cshtml
+++ b/src/Views/Aanmelding/Index.cshtml
@@ -33,6 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.NaamVoogd)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.hulpverlener)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -59,6 +62,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NaamVoogd)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.hulpverlener)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.AanmeldingId">Edit</a> |
