--- a/src/Views/Aanmelding/Delete.cshtml
+++ b/src/Views/Aanmelding/Delete.cshtml
@@ -54,10 +54,10 @@
             @Html.DisplayFor(model => model.NaamVoogd)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.hulpverlener)
+            @Html.DisplayNameFor(model => model.Hulpverlener)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.hulpverlener)
+            @Html.DisplayFor(model => model.Hulpverlener)
         </dd>
     </dl>
     
