--- a/src/Views/Aanmelding/Edit.cshtml
+++ b/src/Views/Aanmelding/Edit.cshtml
@@ -49,9 +49,9 @@
                 <span asp-validation-for="NaamVoogd" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="hulpverlener" class="control-label"></label>
-                <input asp-for="hulpverlener" class="form-control" />
-                <span asp-validation-for="hulpverlener" class="text-danger"></span>
+                <label asp-for="Hulpverlener" class="control-label"></label>
+                <input asp-for="Hulpverlener" class="form-control" />
+                <span asp-validation-for="Hulpverlener" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
