--- a/src/Views/Aanmelding/Index.cshtml
+++ b/src/Views/Aanmelding/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.NaamVoogd)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.hulpverlener)
+                @Html.DisplayNameFor(model => model.Hulpverlener)
             </th>
             <th></th>
         </tr>
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => item.NaamVoogd)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.hulpverlener)
+                @Html.DisplayFor(modelItem => item.HulpverlenerId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.AanmeldingId">Edit</a> |
