--- a/src/Views/Aanmelding/Create.cshtml
+++ b/src/Views/Aanmelding/Create.cshtml
@@ -94,11 +94,11 @@
                         </div>
                         <div class="row">
                             <div class="col-md-3">
-                                <label asp-for="hulpverlener">Hulpverlener</label>
+                                <label asp-for="Hulpverlener">Hulpverlener</label>
                             </div>
                             <div class="col-md-9">
-                                <select asp-for="hulpverlener" asp-items="@List"></select>
-                                <span asp-validation-for="hulpverlener" class="text-danger"></span>
+                                <select asp-for="Hulpverlener" asp-items="@List"></select>
+                                <span asp-validation-for="Hulpverlener" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="row">
