--- a/src/Views/Aanmelding/Index.cshtml
+++ b/src/Views/Aanmelding/Index.cshtml
@@ -31,6 +31,9 @@
                 @Html.DisplayNameFor(model => model.Leeftijdscategorie)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.AfspraakDatum)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.NaamVoogd)
             </th>
             <th>
@@ -59,6 +62,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Leeftijdscategorie)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AfspraakDatum)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NaamVoogd)
