--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Moderator" asp-action="Client">Clienten</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Moderator" asp-action="Melding">Melding</a>
+                            </li>
                              <partial name="_LoginPartial"></partial>
                         }
                         else
