--- a/src/Views/Hulpverlener/Melding.cshtml
+++ b/src/Views/Hulpverlener/Melding.cshtml
@@ -19,11 +19,11 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Melding)
+             <td>
+                @item.Client
             </td>
             <td>
-                @item.Client.Voornaam @item.Client.Achternaam 
+                @Html.DisplayFor(modelItem => item.Melding)
             </td>
             <td>
                 @* <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
