--- a/src/Views/PriveChat/Index.cshtml
+++ b/src/Views/PriveChat/Index.cshtml
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.naam)
             </th>
+            <th>
+                <p>Client</p>
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -25,6 +28,10 @@
                 @Html.DisplayFor(modelItem => item.naam)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.client.Voornaam)
+            </td>
+            <td>
+                <a asp-action="Chat" asp-route-id="@item.client.Id">Edit</a> |
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
