--- a/src/Views/PriveChat/Chat.cshtml
+++ b/src/Views/PriveChat/Chat.cshtml
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row">&nbsp;</div>
         <div class="row">
-            <div class="col-4"><input type="text" for="clientid" id="clientid" value=@ViewBag.clientid></div>
-            <div class="col-4"><input type="text" for="chattid" id="chattid" value=@ViewBag.chattid></div>
-            <div class="col-4"><input type="text" for="verstuurder" id="verstuurder" value=@ViewBag.verstuurder></div>
+            <div class="col-4"><input type="hidden" for="clientid" id="clientid" value=@ViewBag.clientid></div>
+            <div class="col-4"><input type="hidden" for="chattid" id="chattid" value=@ViewBag.chattid></div>
+            <div class="col-4"><input type="hidden" for="verstuurder" id="verstuurder" value=@ViewBag.verstuurder></div>
         </div>
 
         <div class="row">
