--- a/src/Views/Aanmelding/Create.cshtml
+++ b/src/Views/Aanmelding/Create.cshtml
@@ -112,7 +112,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 justify-content-end d-flex">
-                                <input type="submit" value="Create" class="btn btn-secondary" />
+                                <input type="submit" onclick="send()" value="Create" class="btn btn-secondary" />
                             </div>
                         </div>
                     </div>
@@ -121,3 +121,26 @@
         </div>
     </div>
 </section>
+
+<script>
+    function send()
+    {
+    var client =
+    {
+        volledigenaam: "Test",
+        IBAN: null,
+        BSN: "116455433",
+        gebdatum: "Saturday, December 27, 2002"
+    };
+
+    fetch("https://orthopedagogie-zmdh.herokuapp.com/clienten?sleutel=166435290", 
+    {
+        "method": "post",
+         body: JSON.stringify(client),
+         headers: {
+            "content-type": "application/json"
+         }
+    })
+    .catch((err) => alert(err));
+    }
+</script>
