Een moderator kan het overzicht van de behandelingen van de behandelaar zien.

--- a/src/Views/Moderator/Hulpverlener.cshtml
+++ b/src/Views/Moderator/Hulpverlener.cshtml
@@ -33,7 +33,7 @@
                 @Html.DisplayFor(modelItem => item.Beschrijving)
             </td>
             <td>
-                <a asp-action="Clienten" asp-route-id="@item.Id">Clienten</a> 
+                <a asp-action="Behandelingen" asp-route-id="@item.Id">Clienten</a> 
             </td>
         </tr>
 }
