--- a/src/Views/Moderator/Behandelingen.cshtml
+++ b/src/Views/Moderator/Behandelingen.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<Client>
 
 @{
-    ViewData["Title"] = "Clienten";
+    ViewData["Title"] = "Behandelingen";
 }
 
 <h1>Clienten</h1>
