--- a/src/Views/Hulpverlener/Melding.cshtml
+++ b/src/Views/Hulpverlener/Melding.cshtml
@@ -20,7 +20,7 @@
 @foreach (var item in Model) {
         <tr>
              <td>
-                @item.Client
+                @item.Client.Voornaam
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Melding)
